[gd_scene load_steps=10 format=3 uid="uid://c8vqjtxhsd1g2"]

[ext_resource type="Texture2D" uid="uid://d30bu2vegfycj" path="res://textures/entities/spider/body.png" id="1_cl536"]
[ext_resource type="Script" path="res://scripts/entities/spider_thing.gd" id="1_yt3ap"]
[ext_resource type="Texture2D" uid="uid://blkb7031nv1ih" path="res://textures/entities/spider/eye.png" id="3_s7aqu"]
[ext_resource type="Texture2D" uid="uid://b2evimrjanp2q" path="res://textures/entities/spider/iris.png" id="4_7ujnd"]
[ext_resource type="PackedScene" uid="uid://d4l174v4ofimd" path="res://scenes/components/hitbox.tscn" id="5_86tu2"]
[ext_resource type="PackedScene" uid="uid://b3012evdp0k0" path="res://scenes/components/fire_emitter.tscn" id="6_ji7uv"]

[sub_resource type="Curve" id="Curve_b87d2"]
_data = [Vector2(0, 1), 0.0, -0.901757, 0, 1, Vector2(1, 0.098243), -0.901757, 0.0, 1, 0]
point_count = 2

[sub_resource type="CircleShape2D" id="CircleShape2D_8ol42"]
radius = 21.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_k3u5l"]
radius = 22.0
height = 94.0

[node name="spider_thing" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_yt3ap")
starting_hp = 15

[node name="visuals" type="Node2D" parent="."]

[node name="leg_left_up" type="Line2D" parent="visuals"]
points = PackedVector2Array(-8, -56, -30, -46, -39, 0)
width_curve = SubResource("Curve_b87d2")
default_color = Color(0.0980392, 0.0196078, 0.0392157, 1)
begin_cap_mode = 2

[node name="leg_right_up" type="Line2D" parent="visuals"]
points = PackedVector2Array(8, -56, 30, -46, 39, 0)
width_curve = SubResource("Curve_b87d2")
default_color = Color(0.0980392, 0.0196078, 0.0392157, 1)
begin_cap_mode = 2

[node name="leg_left_top" type="Line2D" parent="visuals"]
points = PackedVector2Array(-15, -32, -40, -38, -6, 0)
width_curve = SubResource("Curve_b87d2")
default_color = Color(0, 0, 0, 1)
begin_cap_mode = 2

[node name="leg_right_top" type="Line2D" parent="visuals"]
points = PackedVector2Array(15, -32, 40, -38, 6, 0)
width_curve = SubResource("Curve_b87d2")
default_color = Color(0, 0, 0, 1)
begin_cap_mode = 2

[node name="leg_right_bottom" type="Line2D" parent="visuals"]
points = PackedVector2Array(10, -24, 30, -22, 32, 0)
width_curve = SubResource("Curve_b87d2")
default_color = Color(0.121569, 0.0313726, 0.0862745, 1)
begin_cap_mode = 2

[node name="leg_left_bottom" type="Line2D" parent="visuals"]
points = PackedVector2Array(-10, -24, -30, -22, -32, 0)
width_curve = SubResource("Curve_b87d2")
default_color = Color(0.121569, 0.0313726, 0.0862745, 1)
begin_cap_mode = 2

[node name="body" type="Sprite2D" parent="visuals"]
position = Vector2(0, -32)
texture = ExtResource("1_cl536")
offset = Vector2(0, -18)

[node name="eye" type="Sprite2D" parent="visuals"]
position = Vector2(0, -80)
texture = ExtResource("3_s7aqu")

[node name="iris" type="Sprite2D" parent="visuals/eye"]
texture = ExtResource("4_7ujnd")

[node name="floor_check" type="RayCast2D" parent="."]
position = Vector2(0, -50)
target_position = Vector2(0, 128)
collision_mask = 2
hit_from_inside = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -77)
shape = SubResource("CircleShape2D_8ol42")

[node name="hitbox" parent="." instance=ExtResource("5_86tu2")]
entity = NodePath("..")
ignore_tag = "evil"

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(0, -51)
shape = SubResource("CapsuleShape2D_k3u5l")

[node name="fire_emitter" parent="." instance=ExtResource("6_ji7uv")]
properties = {
"dimensions": Vector2(80, -96),
"emit_cd": 0
}

[node name="fire_emitter2" parent="." instance=ExtResource("6_ji7uv")]
position = Vector2(0, -43)
properties = {
"dimensions": Vector2(58, -64),
"emit_cd": 0
}
